--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatbot003",
   "version": "1.0.0",
-  "type":"module",
+  "type": "module",
   "description": "chat bot integrate with OpenAI/ChatGPT",
   "main": "chatbot.js",
   "scripts": {
@@ -9,12 +9,13 @@
     "start": "node chatbot.js"
   },
   "dependencies": {
-      "qrcode-terminal": "^0.12.0",
-      "wechaty": "^1.20.2",
-      "wechaty-puppet-wechat": "^1.18.4",
-      "next": "^13.1.1",
-      "chatgpt": "^5.1.2"
-
+    "chatgpt": "^5.1.2",
+    "file-box": "^1.4.15",
+    "next": "^13.1.1",
+    "openai": "^3.1.0",
+    "qrcode-terminal": "^0.12.0",
+    "wechaty": "^1.20.2",
+    "wechaty-puppet-wechat": "^1.18.4"
   },
   "author": "",
   "license": "ISC"
